# KasperskyTesting

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/: export.py
app/core/: config.py
app/infrastructure/: file_storage.py
app/services/: excel_export_service.py  file_service.py  text_analyzer_service.py
app/tasks/: report_tasks.py
