[project]
name = "kasperskytesting"
version = "0.1.0"
description = ""
authors = [
    {name = "Danila Golubev",email = "danila25golubev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.41.0,<0.42.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pymorphy2 (>=0.9.1,<0.10.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "celery (>=5.6.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
